# specs/openapi.yaml
@@ -17,184 +17,6 @@ security:
       - banter_bus:question:read
       - banter_bus:question:write
 paths:
-  /game:
-    get:
-      tags:
-        - game
-      summary: Get all game types.
-      operationId: get_all_game_type
-      security:
-        - jwt:
-            - banter_bus:question:read
-      responses:
-        200:
-          description: All the game types.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Game"
-      x-swagger-router-controller: banter_bus.web.controllers.game_controller
-    post:
-      tags:
-        - game
-      summary: Create a new game type.
-      operationId: create_game_type
-      security:
-        - jwt:
-            - banter_bus:question:write
-      requestBody:
-        description: Details of the new game to create.
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/NewGame"
-            example:
-              name: "quibly"
-              rules_url: "https://gitlab.com/banter-bus/games"
-      responses:
-        200:
-          description: Created a new game type.
-          content: {}
-      x-swagger-router-controller: banter_bus.web.controllers.game_controller
-      x-codegen-request-body-name: body
-  /game/{game_name}:
-    get:
-      tags:
-        - game
-      summary: Get a game type.
-      operationId: get_game_type
-      security:
-        - jwt:
-            - banter_bus:game:read
-      parameters:
-        - name: game_name
-          in: path
-          description: The name of the game type to get.
-          required: true
-          schema:
-            type: string
-      responses:
-        200:
-          description: Deleted game type.
-          content: {}
-        404:
-          description: The game type does not exist.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/APIError"
-              example:
-                error_type: "game_type_does_not_exist_error"
-                message: "Failed to delete game type called FibbingIt"
-      x-swagger-router-controller: banter_bus.web.controllers.game_controller
-    delete:
-      tags:
-        - game
-      summary: Delete a game type.
-      operationId: delete_game_type
-      security:
-        - jwt:
-            - banter_bus:game:write
-      parameters:
-        - name: game_name
-          in: path
-          description: The name of the game type to delete.
-          required: true
-          schema:
-            type: string
-      responses:
-        200:
-          description: Deleted game type.
-          content: {}
-        404:
-          description: The game id does not exist.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/APIError"
-              example:
-                error_type: "game_type_does_not_exist_error"
-                message: "Failed to delete game type called FibbingIt"
-      x-swagger-router-controller: banter_bus.web.controllers.game_controller
-  /game/{game_name}:enable:
-    put:
-      tags:
-        - game
-      summary: Enable a game type. This means it cannot be used to create new games.
-      operationId: enable_game_type
-      security:
-        - jwt:
-            - banter_bus:game:write
-      parameters:
-        - name: game_name
-          in: path
-          description: The name of the game type to delete.
-          required: true
-          schema:
-            type: string
-      responses:
-        200:
-          description: Enabled game type.
-          content: {}
-        404:
-          description: The game type does not exist.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/APIError"
-              example:
-                error_type: "game_type_does_not_exist_error"
-                message: "Failed to delete game type called FibbingIt"
-        409:
-          description: The game type is already enabled.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/APIError"
-              example:
-                error_type: "game_type_already_enabled"
-                message: "Failed to enable game type called FibbingIt. As it is already enable."
-      x-swagger-router-controller: banter_bus.web.controllers.game_controller
-  /game/{game_name}:disable:
-    put:
-      tags:
-        - game
-      summary: Disable a game type. This means it cannot be used to create new games.
-      operationId: disable_game_type
-      security:
-        - jwt:
-            - banter_bus:game:write
-      parameters:
-        - name: game_name
-          in: path
-          description: The name of the game type to delete.
-          required: true
-          schema:
-            type: string
-      responses:
-        200:
-          description: Disabled game type.
-          content: {}
-        404:
-          description: The game type does not exist.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/APIError"
-              example:
-                error_type: "game_type_does_not_exist_error"
-                message: "Failed to delete game type called FibbingIt"
-        409:
-          description: The game type is already disabled.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/APIError"
-              example:
-                error_type: "game_type_already_disabled"
-                message: "Failed to disable game type called FibbingIt. As it is already disabled."
   /game/{game_id}/question:
     post:
       tags:
@@ -381,9 +203,15 @@ components:
     NewQuestion:
       required:
         - question
+        - round
       properties:
         question:
           type: string
+        round:
+          enum:
+            - one
+            - two
+            - three
     GameID:
       type: string
     QuestionID:
@@ -415,7 +243,7 @@ components:
       example:
         id: 4452fd22-fde1-11ea-adc1-0242ac120002
         name: "quibly"
-        questions: []
+        questions: {}
         rules_url: "https://gitlab.com/banter-bus/games"
         state: enabled
     Question:
@@ -423,13 +251,18 @@ components:
         - id
         - question
       properties:
-        id:
-          $ref: "#/components/schemas/QuestionID"
-        question:
-          type: string
-      example:
-        id: 4452fd22-fde1-11ea-adc1
-        question: "What do you prefer x or y?"
+        one:
+          type: array
+          items:
+            type: string
+        two:
+          type: array
+          items:
+            type: string
+        three:
+          type: array
+          items:
+            type: string
     PatchRequest:
       type: array
       items:
